--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|assets|images|js|css|libs|files|icons|fonts)
+RewriteCond $1 !^(index\.php|assets|images|js|css|libs|files|icons|fonts|application)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ ./index.php/$1 [L]
